# Stash

./: .env  .gitignore  pyproject.toml  readme.md  requirements.txt
stash/: config.py  main.py
stash/commands/: download.py  filehandler.py  upload.py
stash/utils/: banner.py  test.txt
