[project]
name = "stash"
version = "0.1.1"
description = "A CLI tool for uploading and downloading files to and from stash-it database"
authors = [{ name = "Yash", email = "raunakyash12@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.24.1",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "nanoid>=2.0.0",
    "pyperclip>=1.11.0"
]

[project.scripts]
stash = "stash.main:app"